--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap');
 *{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Hind', sans-serif;
+    color: #88859b;
+    font-size: 15px;
 }
 div button{
     background-color:rgb(116 34 221);;
     color: white;
     height: 30px;
-    font-weight: 350;
+    font-weight: 250;
     width: 150px;
     border-radius: 5px;
     border-width: 0px;
 
 
     
+}
+h2 img{
+    border-radius: 100%;
+    height: 50px;
+    width: 50px;
 }
